# QLens

./: .gitignore  Cargo.toml  LICENSE  config.json  readme.md  readme_cn.md
.github/workflows/: release-tauri.yml  release.yml
crates/backend/: Cargo.toml
crates/backend/src/: http_core.rs  lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: call_with_image.rs.bak  main.rs
crates/core/: Cargo.toml
crates/core/src/: chat_handler.rs  lib.rs
crates/core/src/blob/: asset_id.rs  mod.rs
crates/core/src/session/: mod.rs  redb_session.rs  session.rs  sled_session.rs
crates/core/src/tools/: bbox.rs  fetch.rs  mod.rs  prompt_template.rs  utils.rs
crates/core/src/tools/prelude/: linkedom.bundle.js  structured-json.min.js
frontend/: package.json  vite.config.ts
frontend/src/: app.css
frontend/src/langs/: en.json  ko.json
frontend/src/lib/: i8n.ts  markdownRenderer.ts
frontend/src/lib/components/: ArtifactPanel.svelte  ChatInput.svelte  MarkdownBlock.svelte  MessageList.svelte  SchemaForm.svelte  SettingsModal.svelte
frontend/src/lib/services/: baseUrl.ts  chatService.ts  tauri.ts
frontend/src/lib/stores/: chatStore.ts  settingsStore.ts
frontend/src/routes/: +page.svelte
frontend_clean/: package.json  svelte.config.js  tailwind.config.ts
frontend_clean/src/: app.css
frontend_clean/src/langs/: en.json  ja.json  zh.json
frontend_clean/src/lib/: markdownRenderer.ts  types.ts
frontend_clean/src/lib/components/: ArtifactPanel.svelte  ChatInput.svelte  ChatSidebar.svelte  CollapsibleText.svelte  ErrorToast.svelte  ImageModal.svelte  MessageList.svelte  SettingsModal.svelte  SmartForm.svelte
frontend_clean/src/lib/services/: chatService.ts
frontend_clean/src/lib/stores/: artifactStore.ts  chatStore.ts  settingsStore.ts  themeStore.ts
frontend_clean/src/lib/utils/: chatLogic.ts
frontend_clean/src/routes/: +page.svelte  MarkdownBlock.svelte
src/: blob.rs  chat_handler.rs  lib.rs  schema.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/blob/: blob.rs  mod.rs  redb_blob.rs  sled_blob.rs
src/tools/: bbox.rs  code_interpreter.rs  fetch.rs  image_memo.rs  mod.rs  prompt_template.rs  simple.rs  utils.rs  zoomin.rs
src/tools/prelude/: simplify.min.js
