[package]
name = "chat-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["js", "serde", "v4"] }
tokio = {version = "1", features = ["full"]}
sled = { version = "0.34.7", features = ["zstd", "compression"]}
serde = { version = "1.0.228", features = ["derive"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
image = { version = "0.25.8", features = ["default-formats"] }
base64 = "0.22.1"
anyhow = "1.0.100"
schemars = "1.1.0"
tracing = "0.1.41"
async-openai = {git = "https://github.com/horasal/async-openai", branch = "main"}
futures = "0.3.31"
async-stream = "0.3.6"
imageproc = "0.25.0"
ab_glyph = "0.2.32"
clap = { version = "4.5.51", features = ["derive"] }
axum = { version = "0.8.6", features = ["multipart", "ws"] }
tower-http = { version = "0.6.6", features = ["cors", "fs", "limit","compression-gzip"] }
rust-embed = { version = "8.9.0", features = ["axum"] }
mime_guess = "2.0.5"
resvg = "0.45.1"
whatlang = "0.18.0"
