[package]
name = "qlens-server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chat_ui = { version = "0.1.0", path = "../core" }
clap = "4.5.53"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
whatlang = { version = "0.18.0", features = ["serde"] }
async-openai = {git = "https://github.com/horasal/async-openai", branch = "main"}
tokio = { version = "1.48.0", features = ["full"] }
backend = { version = "0.1.0", path = "../backend" }
rust-embed = { version = "8.9", features = ["axum"] }
serde_json = "1.0.145"
axum = { version = "0.8.7", features = ["ws", "multipart"] }
tower-http = { version = "0.6.7", features = ["fs", "cors", "limit", "compression-gzip"] }
mime_guess = "2.0.5"
